--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -157,3 +157,5 @@ CONFIG_X86_MSR=y
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
 # CONFIG_XZ_DEC_ARM is not set
 # CONFIG_XZ_DEC_ARMTHUMB is not set
+CONFIG_LOCKDEP=y
+CONFIG_PROVE_LOCKING=y
