--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -159,3 +159,5 @@ CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
 # CONFIG_XZ_DEC_ARMTHUMB is not set
 CONFIG_LOCKDEP=y
 CONFIG_PROVE_LOCKING=y
+CONFIG_CMDLINE_BOOL=y
+CONFIG_CMDLINE="trace_event=sched:*,irq:*"
